Install and Integrate veraPDF scans into domain and sitemap crawl (#163)
* Installation of veraPDF dependencies on mac and windows
* Integration of veraPDF scans into domain and sitemap crawls
* Addition of veraPDF scan results into generated report and summary
* -i flag to specify file types scanned (all, html-only, pdf-only)